# arxiv-scan

./: .gitignore  LICENSE  README.md  astro-ph_scan.py  astroph_scan.py  keywords.py  publish-package.md  pyproject.toml  scan_astro-ph.py  setup.cfg  setup.py  wordcounter.py
.github/workflows/: publish.yml
arxiv_scan/: __main__.py  categories.py  config.py  entry_evaluation.py  oai_api.py  output.py  parse.py
scan_astroph/: __main__.py  config.py  entry_evaluation.py  keywords.py  output.py  parse.py  scan_astroph.py  tools.py  wordcounter.py
