[metadata]
name = scan_astroph
author = Martin Schlecker
author_email = schlecker@mpia.de
url = https://github.com/matiscke/scan_astro-ph

[options]
packages = scan_astroph
setup_requires =
    setuptools_scm
install_requires =
    termcolor
    feedparser
    pytz

[options.entry_points]
console_scripts =
    scan_astro-ph = scan_astroph.__main__:main
    scan_astroph = scan_astroph.__main__:main
    astroph-scan = scan_astroph.__main__:main
    scan_astro-ph.wordcounter = scan_astroph.wordcounter:main
