[metadata]
name = arxiv-scan
author = Martin Schlecker
author_email = schlecker@mpia.de
url = https://github.com/matiscke/arxiv-scan

[options]
packages = arxiv_scan
setup_requires =
    setuptools_scm
install_requires =
    termcolor
    feedparser
    pytz

[options.entry_points]
console_scripts =
    arxiv-scan = arxiv_scan.__main__:main
    arxiv-scan.wordcounter = arxiv_scan.wordcounter:main
