[metadata]
name = arxiv-scan
author = Martin Schlecker
author_email = schlecker@mpia.de
maintainer = Simeon Doetsch
maintainer_email = mail@simske.com
url = https://github.com/matiscke/arxiv-scan
description = Find preprints relevant to your individual research
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/matiscke/arxiv-scan/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = arxiv_scan
python_requires = >=3.5
setup_requires =
    setuptools_scm
install_requires =
    termcolor
    feedparser
    pytz

[options.entry_points]
console_scripts =
    arxiv-scan = arxiv_scan.__main__:main
    arxiv-scan.wordcounter = arxiv_scan.wordcounter:main
